--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .container {
             background-color: #ffffff;
             max-width: 400px;
@@ -27,26 +29,31 @@
             text-align: center;
             transition: all 0.3s ease;
         }
+
         h1 {
             color: #333;
         }
+
         form {
             margin: 20px 0;
         }
+
         input {
             padding: 12px;
             margin: 8px 0;
             width: 80%;
             font-size: 15px;
-            border : 1px solid #ccc;
+            border: 1px solid #ccc;
             border-radius: 8px;
             transition: 0.2s;
         }
+
         input:focus {
-          outline: none;
-          border-color: #00c6ff;
-          box-shadow: 0 0 5px rgba(0, 198, 255, 0.4);
+            outline: none;
+            border-color: #00c6ff;
+            box-shadow: 0 0 5px rgba(0, 198, 255, 0.4);
         }
+
         button {
             width: 87%;
             padding: 10px 20px;
@@ -60,19 +67,22 @@
             transition: background-color 0.3s ease;
 
         }
+
         button:hover {
-          background-color: #007acc;
+            background-color: #007acc;
         }
 
         .section {
             margin-bottom: 30px;
         }
+
         #logged-in-screen h1 {
             font-size: 24px;
             color: #333;
             margin-bottom: 30px;
 
         }
+
         #delete-section button {
             background-color: #ff4d4d;
             color: #ffffff;
@@ -86,9 +96,10 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container" id="login-screen">
-        <img src="ybigta_logo.png" alt="YBIGTA Logo" style="width: 80px;">
+        <img src="/static/ybigta_logo.png" alt="YBIGTA Logo" style="width: 80px;">
         <h1>User Management</h1>
         <div class="section" id="login-section">
             <h2>Login</h2>
@@ -139,19 +150,19 @@
                 },
                 body: JSON.stringify({ email, password })
             })
-            .then(response => {
-                if (!response.ok) {
-                    return response.json().then(error => { throw new Error(error.detail); });
-                }
-                return response.json();
-            })
-            .then(data => {
-                userEmail = email; // 로그인 성공 시 이메일 저장
-                document.getElementById('username').textContent = `Hello, ${data.username}!`; // 사용자 이름 표시
-                document.getElementById('login-screen').style.display = 'none';
-                document.getElementById('logged-in-screen').style.display = 'block';
-            })
-            .catch(error => alert(`Login failed: ${error.message}`));
+                .then(response => {
+                    if (!response.ok) {
+                        return response.json().then(error => { throw new Error(error.detail); });
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    userEmail = email; // 로그인 성공 시 이메일 저장
+                    document.getElementById('username').textContent = `Hello, ${data.username}!`; // 사용자 이름 표시
+                    document.getElementById('login-screen').style.display = 'none';
+                    document.getElementById('logged-in-screen').style.display = 'block';
+                })
+                .catch(error => alert(`Login failed: ${error.message}`));
         }
 
         function registerUser() {
@@ -166,14 +177,14 @@
                 },
                 body: JSON.stringify({ email, password, username })
             })
-            .then(response => {
-                if (!response.ok) {
-                    return response.json().then(error => { throw new Error(error.detail); });
-                }
-                return response.json();
-            })
-            .then(() => alert(`Registration successful! Welcome, ${username}.`)) // 성공 메시지에 사용자 이름 표시
-            .catch(error => alert(`Registration failed: ${error.message}`));
+                .then(response => {
+                    if (!response.ok) {
+                        return response.json().then(error => { throw new Error(error.detail); });
+                    }
+                    return response.json();
+                })
+                .then(() => alert(`Registration successful! Welcome, ${username}.`)) // 성공 메시지에 사용자 이름 표시
+                .catch(error => alert(`Registration failed: ${error.message}`));
         }
 
         function updatePassword() {
@@ -186,14 +197,14 @@
                 },
                 body: JSON.stringify({ email: userEmail, new_password: newPassword })
             })
-            .then(response => {
-                if (!response.ok) {
-                    return response.json().then(error => { throw new Error(error.detail); });
-                }
-                return response.json();
-            })
-            .then(() => alert(`Password successfully updated!`)) // 성공 메시지
-            .catch(error => alert(`Password update failed: ${error.message}`));
+                .then(response => {
+                    if (!response.ok) {
+                        return response.json().then(error => { throw new Error(error.detail); });
+                    }
+                    return response.json();
+                })
+                .then(() => alert(`Password successfully updated!`)) // 성공 메시지
+                .catch(error => alert(`Password update failed: ${error.message}`));
         }
 
         function deleteUser() {
@@ -209,20 +220,21 @@
                 },
                 body: JSON.stringify({ email: userEmail }) // 저장된 이메일 전송
             })
-            .then(response => {
-                if (!response.ok) {
-                    return response.json().then(error => { throw new Error(error.detail); });
-                }
-                return response.json();
-            })
-            .then(() => {
-                alert(`User deleted successfully!`);
-                document.getElementById('logged-in-screen').style.display = 'none';
-                document.getElementById('login-screen').style.display = 'block';
-                userEmail = null; // 이메일 초기화
-            })
-            .catch(error => alert(`Account deletion failed: ${error.message}`));
+                .then(response => {
+                    if (!response.ok) {
+                        return response.json().then(error => { throw new Error(error.detail); });
+                    }
+                    return response.json();
+                })
+                .then(() => {
+                    alert(`User deleted successfully!`);
+                    document.getElementById('logged-in-screen').style.display = 'none';
+                    document.getElementById('login-screen').style.display = 'block';
+                    userEmail = null; // 이메일 초기화
+                })
+                .catch(error => alert(`Account deletion failed: ${error.message}`));
         }
     </script>
 </body>
+
 </html>
